code cleanup and spelling